2015-04-04 Riccardo Mottola <rm@gnu.org>

	* GRText.m
	Put most attributes in the roperty list when initializing from Data.

2015-04-04 Riccardo Mottola <rm@gnu.org>

	* GRText.h
	* GRText.m
	Use as only ivar the paragraph attributes, remove derived information.

2015-04-04 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m
	Use the editor inited in super.

2015-04-04 Riccardo Mottola <rm@gnu.org>

	* GRImage.m
	Correctly initialize position in init, set string and font through setString.

2015-04-02 Riccardo Mottola <rm@gnu.org>

	* GRDrawableObject.h
	* GRDrawableObject.m
	Provide allocEditor to get object editor and init using it.
	That way subclasses can init with super and get the correct editor.

	* GRBox.m
	* GRImage.m
	* GRCircle.m
	Use the editor inited in super.

	* GRText.m
	init through super class.

2015-03-31 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Save also Image objects by encoding them

2015-03-24 Riccardo Mottola <rm@gnu.org>

	* GRImageEditor.h
	* GRImageEditor.m
	Dedicated Image Editor.

	* GRImage.h
	* GRImage.m
	Remember original size and aspect ratio, initialilye dedicated editor.

2015-03-21 Riccardo Mottola <rm@gnu.org>

	* GRBoxEditor.h
	* GRBoxEditor.m
	* GRCircleEditor.h
	* GRCircleEditor.m
	Factor out control point constraints in a separate method.

2015-02-28 Riccardo Mottola <rm@gnu.org>

	* GRImage.m
	Draw image respecting zoom factor.

2015-02-27 Riccardo Mottola <rm@gnu.org>

	* GRImage.h
	* GRImage.m
	Image accessor.

	* GRDocView.m
	If only a single Image is selected, copy it to the clipboard also as NSTIFFPboardType.

2015-02-27 Riccardo Mottola <rm@gnu.org>

	* GRImage.m
	Encode (and decode) image representation data in description

	* GRDocView.m
	Recognize images in paste ops.

2015-01-18 Riccardo Mottola <rm@gnu.org>

	* GRImage.h
	* GRImage.m
	Add primtive GRImage implementation
    
	* GRDocView.m
	Support for pasting images and generating GRImages
  
2015-01-03 Riccardo Mottola <rm@gnu.org>
