@@ -1,7 +1,12 @@
+2017-01-01 Riccardo Mottola <rm@gnu.org>
+
+	* GRCircle.m 
+        decode circleness properly
+        
 2015-04-04 Riccardo Mottola <rm@gnu.org>
 
 	* GRText.m
-	Put most attributes in the roperty list when initializing from Data.
+	Put most attributes in the property list when initializing from Data.
 
 2015-04-04 Riccardo Mottola <rm@gnu.org>
 
